thread_sync.c: rename mutex_trylock internal function

[Bug #21793]

To fix a naming conflict on solaris.